--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -174,6 +174,66 @@
             border-bottom: 1px solid rgba(255, 255, 255, 0.05);
         }
 
+        /* Mobile Responsive */
+        .hamburger {
+            display: none;
+            font-size: 24px;
+            cursor: pointer;
+            color: var(--primary);
+        }
+
+        .sidebar-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 90;
+        }
+
+        @media (max-width: 768px) {
+            .sidebar {
+                transform: translateX(-100%);
+                transition: transform 0.3s ease;
+            }
+
+            .sidebar.open {
+                transform: translateX(0);
+            }
+
+            .main-content {
+                margin-left: 0;
+                padding: 15px;
+            }
+
+            .hamburger {
+                display: block;
+                margin-right: 15px;
+            }
+
+            .header h1 {
+                font-size: 20px;
+            }
+
+            .stats-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .table-container {
+                overflow-x: auto;
+            }
+
+            #tablesGrid {
+                grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)) !important;
+            }
+
+            .sidebar-overlay.active {
+                display: block;
+            }
+        }
+
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -206,12 +266,17 @@
     <!-- Main Content -->
     <div class="main-content">
         <div class="header">
-            <h1 id="pageTitle">Dashboard</h1>
+            <div style="display:flex; align-items:center;">
+                <div class="hamburger" onclick="toggleSidebar()">☰</div>
+                <h1 id="pageTitle">Dashboard</h1>
+            </div>
             <div class="user-profile">
-                <span id="adminName">Loading...</span>
+                <span id="adminName" style="display:none;">Loading...</span>
+                <!-- Hidden on mobile via CSS if needed, or just simplified -->
                 <div class="avatar">A</div>
             </div>
         </div>
+        <div class="sidebar-overlay" onclick="toggleSidebar()"></div>
 
         <!-- SECTION: DASHBOARD -->
         <div id="dashboard-section" class="content-section active">
@@ -276,9 +341,42 @@
 
         <!-- SECTION: TABLES -->
         <div id="tables-section" class="content-section">
-            <div class="stat-card">
-                <h3>Table Management</h3>
-                <p style="color:#999;">Feature coming soon.</p>
+        </div>
+    </div>
+
+    <!-- CUSTOM MODAL for Menu Items -->
+    <div id="menuModal"
+        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:200; align-items:center; justify-content:center;">
+        <div
+            style="background:var(--card-bg); padding:30px; border-radius:12px; width:90%; max-width:400px; border:1px solid #444;">
+            <h3 id="modalTitle" style="margin-bottom:20px;">Add Menu Item</h3>
+            <input type="hidden" id="editItemId">
+            <label style="display:block; margin-bottom:5px; color:#aaa;">Name</label>
+            <input type="text" id="itemName"
+                style="width:100%; padding:10px; margin-bottom:15px; border-radius:6px; border:1px solid #444; background:#111; color:white;">
+
+            <label style="display:block; margin-bottom:5px; color:#aaa;">Price ($)</label>
+            <input type="number" step="0.01" id="itemPrice"
+                style="width:100%; padding:10px; margin-bottom:15px; border-radius:6px; border:1px solid #444; background:#111; color:white;">
+
+            <label style="display:block; margin-bottom:5px; color:#aaa;">Category</label>
+            <select id="itemCat"
+                style="width:100%; padding:10px; margin-bottom:15px; border-radius:6px; border:1px solid #444; background:#111; color:white;">
+                <option value="Starters">Starters</option>
+                <option value="Mains">Mains</option>
+                <option value="Burgers">Burgers</option>
+                <option value="Drinks">Drinks</option>
+                <option value="Desserts">Desserts</option>
+            </select>
+
+            <label style="display:block; margin-bottom:5px; color:#aaa;">Image URL</label>
+            <input type="text" id="itemImg" placeholder="https://..."
+                style="width:100%; padding:10px; margin-bottom:20px; border-radius:6px; border:1px solid #444; background:#111; color:white;">
+
+            <div style="text-align:right;">
+                <button onclick="closeMenuModal()"
+                    style="background:transparent; color:#aaa; border:1px solid #666; padding:8px 16px; border-radius:6px; cursor:pointer; margin-right:10px;">Cancel</button>
+                <button onclick="saveMenuItem()" class="btn-primary">Save Item</button>
             </div>
         </div>
     </div>
@@ -346,8 +444,19 @@
             window.location.href = 'login.html';
         }
 
+        function toggleSidebar() {
+            document.querySelector('.sidebar').classList.toggle('open');
+            document.querySelector('.sidebar-overlay').classList.toggle('active');
+        }
+
         // --- NAVIGATION ---
         function showSection(sectionId) {
+            // Auto-close sidebar on mobile
+            if (window.innerWidth <= 768) {
+                document.querySelector('.sidebar').classList.remove('open');
+                document.querySelector('.sidebar-overlay').classList.remove('active');
+            }
+
             // Sidebar UI
             document.querySelectorAll('.nav-item').forEach(el => {
                 el.classList.remove('active');
@@ -367,6 +476,52 @@
             if (sectionId === 'menu') fetchMenuItems();
             if (sectionId === 'staff') fetchStaff();
             if (sectionId === 'roles') fetchRoles();
+            if (sectionId === 'tables') fetchTables();
+        }
+
+        // --- TABLES ---
+        async function fetchTables() {
+            const container = document.getElementById('tablesGrid');
+            const { data, error } = await _supabase.from('restaurant_tables').select('*').order('table_number');
+
+            if (error) { container.textContent = 'Error loading tables'; return; }
+            if (!data || !data.length) {
+                container.innerHTML = '<p>No tables found. Click "Reset/Init" to create them.</p>';
+                return;
+            }
+
+            container.innerHTML = data.map(t => {
+                const isFree = t.status === 'available';
+                const color = isFree ? 'var(--success)' : 'var(--danger)';
+
+                return `
+                <div onclick="toggleTable('${t.id}', '${t.status}')" style="
+                    background: ${isFree ? 'rgba(16, 185, 129, 0.1)' : 'rgba(239, 68, 68, 0.1)'}; 
+                    border: 2px solid ${color}; 
+                    border-radius: 12px; 
+                    padding: 20px; 
+                    text-align: center; 
+                    cursor: pointer;
+                    transition: transform 0.2s;
+                " onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+                    <div style="font-size:24px; font-weight:bold; color:white;">T-${t.table_number}</div>
+                    <div style="margin-top:5px; color:${color}; font-size:14px; font-weight:bold;">${t.status.toUpperCase()}</div>
+                </div>`;
+            }).join('');
+        }
+
+        async function toggleTable(id, currentStatus) {
+            const newStatus = currentStatus === 'available' ? 'taken' : 'available';
+            await _supabase.from('restaurant_tables').update({ status: newStatus }).eq('id', id);
+            fetchTables();
+        }
+
+        async function initTables() {
+            if (!confirm('Create default tables (1-10)?')) return;
+            const seeds = Array.from({ length: 10 }, (_, i) => ({ table_number: i + 1, status: 'available' }));
+            const { error } = await _supabase.from('restaurant_tables').upsert(seeds, { onConflict: 'table_number' });
+            if (error) alert('Error: ' + error.message);
+            else fetchTables();
         }
 
         // --- ORDERS ---
@@ -404,12 +559,13 @@
                 const itemsStr = Array.isArray(items) ? items.map(i => `${i.quantity}x ${i.name}`).join(', ') : '';
                 // Since we only show pending, color is always generic or specific for pending
                 const color = '#ffb020';
+                const tableBadge = o.table_number ? `<span style="background:#3b82f6; color:white; padding:2px 6px; border-radius:4px; font-size:12px; margin-left:8px;">Table ${o.table_number}</span>` : '';
 
                 return `
                 <div class="stat-card" style="margin-bottom:10px; border-left:4px solid ${color};">
                     <div style="display:flex; justify-content:space-between;">
                         <div>
-                            <strong>#${o.id.slice(0, 8)}...</strong> <small>${new Date(o.created_at).toLocaleTimeString()}</small><br>
+                            <strong>#${o.id.slice(0, 8)}...</strong> ${tableBadge} <small>${new Date(o.created_at).toLocaleTimeString()}</small><br>
                             <div style="margin-top:5px; font-size:15px; color:white;">${itemsStr}</div>
                             ${o.custom_notes ? `<div style="margin-top:5px; font-size:12px; color:#aaa;">📝 ${o.custom_notes}</div>` : ''}
                         </div>
@@ -515,26 +671,44 @@
             `).join('');
         }
 
-        // --- MODALS (Simplified for Single File) ---
+        // --- MODALS (Enhanced) ---
         function openMenuModal(id) {
+            const modal = document.getElementById('menuModal');
             const item = id ? window._menuData.find(i => i.id == id) : {};
-            const isEdit = !!id;
 
-            // Allow simplified prompt chain for speed in this demo
-            // In production, use a dialog element
-            const name = prompt("Item Name:", item.name || "");
-            if (!name) return;
-            const price = prompt("Price:", item.price || "");
-            const cat = prompt("Category (Mains, Burgers, Drinks...):", item.category || "Mains");
-            const img = prompt("Image URL:", item.image_url || "");
+            document.getElementById('modalTitle').textContent = id ? 'Edit Menu Item' : 'Add New Item';
+            document.getElementById('editItemId').value = id || '';
+            document.getElementById('itemName').value = item.name || '';
+            document.getElementById('itemPrice').value = item.price || '';
+            document.getElementById('itemCat').value = item.category || 'Mains';
+            document.getElementById('itemImg').value = item.image_url || '';
 
-            const payload = { name, price: parseFloat(price), category: cat, image_url: img };
+            modal.style.display = 'flex';
+        }
 
-            (async () => {
-                if (isEdit) await _supabase.from('menu_items').update(payload).eq('id', id);
-                else await _supabase.from('menu_items').insert([payload]);
-                fetchMenuItems();
-            })();
+        function closeMenuModal() {
+            document.getElementById('menuModal').style.display = 'none';
+        }
+
+        async function saveMenuItem() {
+            const id = document.getElementById('editItemId').value;
+            const name = document.getElementById('itemName').value;
+            const price = parseFloat(document.getElementById('itemPrice').value);
+            const category = document.getElementById('itemCat').value;
+            const image_url = document.getElementById('itemImg').value;
+
+            if (!name || isNaN(price)) { alert('Please enter valid name and price'); return; }
+
+            const payload = { name, price, category, image_url };
+
+            if (id) {
+                await _supabase.from('menu_items').update(payload).eq('id', id);
+            } else {
+                await _supabase.from('menu_items').insert([payload]);
+            }
+
+            closeMenuModal();
+            fetchMenuItems();
         }
 
         function openStaffModal() {
