FIX: Apply secure UUID QR codes and mobile responsive CSS

--- a/admin_qr_codes.html
+++ b/admin_qr_codes.html
@@ -86,26 +86,55 @@
 
     <div class="grid" id="qrGrid"></div>
 
+    <!-- Supabase SDK & Config -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabase-inline.js"></script>
+
     <script>
-        // CHANGE THIS TO YOUR VERCEL URL
         const BASE_URL = window.location.origin + '/menu.html';
-        const tables = 10;
         const container = document.getElementById('qrGrid');
 
-        for (let i = 1; i <= tables; i++) {
-            const url = `${BASE_URL}?table=${i}`;
-            // Utilizing a public QR code API for simplicity
-            const qrSrc = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(url)}`;
+        async function generateCodes() {
+            container.innerHTML = '<p>Loading tables from database...</p>';
 
-            const card = document.createElement('div');
-            card.className = 'card';
-            card.innerHTML = `
-                <h2>Table ${i}</h2>
-                <img src="${qrSrc}" alt="QR for Table ${i}">
-                <div style="font-size:12px; color:#999; margin-top:10px;">Scan to order</div>
-            `;
-            container.appendChild(card);
+            const client = window._supabase;
+            if (!client) {
+                container.innerHTML = '<p style="color:red">Error: Database connection not available</p>';
+                return;
+            }
+
+            const { data: tables, error } = await client
+                .from('restaurant_tables')
+                .select('*')
+                .order('table_number');
+
+            if (error) {
+                container.innerHTML = `<p style="color:red">Error: ${error.message}</p>`;
+                return;
+            }
+
+            if (!tables || tables.length === 0) {
+                container.innerHTML = '<p>No tables found. Go to Admin Dashboard → Tables → "Reset/Init Tables" first.</p>';
+                return;
+            }
+
+            container.innerHTML = '';
+            tables.forEach(t => {
+                const secureUrl = `${BASE_URL}?table_id=${t.id}`;
+                const qrSrc = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(secureUrl)}`;
+
+                const card = document.createElement('div');
+                card.className = 'card';
+                card.innerHTML = `
+                    <h2>Table ${t.table_number}</h2>
+                    <img src="${qrSrc}" alt="QR for Table ${t.table_number}">
+                    <div style="font-size:12px; color:#999; margin-top:10px;">Secure ID: ...${t.id.slice(-4)}</div>
+                `;
+                container.appendChild(card);
+            });
         }
+
+        generateCodes();
     </script>
 </body>
 
