--- a/menu.html
+++ b/menu.html
@@ -19,11 +19,7 @@
                     view the menu and order.</p>
 
                 <div style="margin-top:20px; border-top:1px solid #333; padding-top:20px;">
-                    <p style="font-size:12px; color:#666; margin-bottom:10px;">Trouble scanning?</p>
-                    <input type="number" id="manualTableInput" placeholder="Enter Table No."
-                        style="padding:10px; border-radius:6px; border:1px solid #444; background:#111; color:white; width:120px; text-align:center;">
-                    <button onclick="setManualTable()"
-                        style="padding:10px 15px; background:#ff6600; color:white; border:none; border-radius:6px; cursor:pointer; font-weight:bold;">Go</button>
+                    <p style="font-size:12px; color:#666;">QR code scan required for service.</p>
                 </div>
             </div>
         </div>
